--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link rel="shortcut icon" href="./img/fav-logo.ico" type="image/x-icon">
 		<link
 			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Document</title>
+		<title>Loweb</title>
 	</head>
 	<body>
 	
